[package]
name = "blirumah-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "json", "time"] }
job_scheduler = "1.2.1"
chrono = "0.4.31"
dotenv = "0.15.0"
anyhow = "1.0.79"
